<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinishActivity"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:id="@+id/endTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/end"
        android:textColor="@color/colorAccent"
        android:textSize="32sp"
        android:textAllCaps="true" />
    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/item_circular_color_accent_border"
        android:gravity="center">
        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_action_done" />
    </LinearLayout>
    <Button
        android:id="@+id/finishButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/finish"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>