<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMIActivity"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bmiToolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white" />
    <RadioGroup
        android:id="@+id/unitsRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bmiToolbar"
        android:layout_margin="12dp"
        android:background="@drawable/drawable_radio_group_tab_background"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/metricUnitRadioButton"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/drawable_units_tab_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="metric units"
            android:textColor="@drawable/drawable_units_tab_text_color_selector"
            android:textSize="14sp"
            android:textAllCaps="true"
            android:textStyle="bold"/>
        <RadioButton
            android:id="@+id/usUnitRadioButton"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/drawable_units_tab_selector"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="us units"
            android:textColor="@drawable/drawable_units_tab_text_color_selector"
            android:textSize="14sp"
            android:textAllCaps="true"
            android:textStyle="bold"/>
    </RadioGroup>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weightTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorPrimary"
        android:layout_below="@id/unitsRadioGroup"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/weightEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_kg"
            android:inputType="numberDecimal"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/heightTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:visibility="visible"
        tools:visibility="invisible"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorPrimary"
        android:layout_below="@id/weightTextInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/heightEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height_cm"
            android:inputType="numberDecimal"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:id="@+id/usUnitLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@id/weightTextInput">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usFeetTextInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="12dp"
            app:boxStrokeColor="@color/colorAccent"
            app:hintTextColor="@color/colorPrimary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/usFeetEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Feet"
                android:inputType="numberDecimal"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usInchTextInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="12dp"
            app:boxStrokeColor="@color/colorAccent"
            app:hintTextColor="@color/colorPrimary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/usInchEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Inch"
                android:inputType="numberDecimal"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bmiResultLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/heightTextInput"
        android:padding="12dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:visibility="invisible"
        tools:visibility="visible">
        <TextView
            android:id="@+id/yourBMITextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAllCaps="true"
            android:text="@string/your_bmi"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/bmiValueTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="4dp"
            tools:text="30.00"/>
        <TextView
            android:id="@+id/bmiTypeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="4dp"
            tools:text="Overweighted"/>
        <TextView
            android:id="@+id/bmiDescriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_marginTop="4dp"
            tools:text="Overweighted is ..."/>
    </LinearLayout>
    <Button
        android:id="@+id/calculateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bmiResultLinearLayout"
        android:layout_gravity="bottom"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="12dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:textSize="18sp" />
</RelativeLayout>